--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -8,9 +8,11 @@
 
 body {
     box-sizing: border-box;
+    background-color: map-get($color, background-footer); /*utile que sur grand écran qui peut afficher plus que la hauteur du site*/
 }
 
 body>*{
+    background-color: white;
     padding: 0 $main-padding;
     @media only screen and (min-width: map-get($breakpoint-orga, maximum-width)) {
         /*à partir d'un certain point on arrête d'étirer et on fixe la largeur du contenu*/
